Add address to index page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   </head>
 
   <body>
-    <p>Hello, world!</p>
+    Jean Valjean <br>
+    55 Rue Plumet <br>
+    Amonate, VA 2460 <br>
   </body>
 
 </html>
