--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
   <body>
     <h1>The Learn Enough Story</h1>
+
       <p>
         Learn Enough to Be Dangerous is a leader in the movement to teach
         <em>technical sophistication</em>, the seemingly magical ability to
@@ -20,7 +21,9 @@
         href="http://learnenough.com/email">sign up for our official email
         list</a> now.
       </p>
+
     <h2>Background</h2>
+
     <p>
       Learn Enough to Be Dangerous is an outgrowth of the <a
       href="http://railstutorial.org/"> Ruby on Rails Tutorial </a> and the
@@ -33,16 +36,46 @@
       Other related tutorials can be found at <a href="http://learnenough.com/">
       learnenough.com</a>.
     </p>
+
     <h2>Founders</h2>
+
       <p>
         Learn Enough to Be Dangerous was founded in 2015 by Michael Hartl, Lee
         Donahoe, and Nick Merwin. We believe that the kind of technical
         sophistication taught by the Learn Enough tutorials can benefit
         <strong>at least a billion people</strong>, and probably more.
       </p>
+
     <h3>Michael Hartl</h3>
+
+    <p>
+      Michael is the creator of the <a href="http://railstutorial.org/">
+      Ruby on Rails Tutorial</a> and principal author of the
+      <a href="http://learnenough.com/">Learn Enough to Be Dangerous</a>
+      introductory sequence. He is an advanced student of
+      <a href="http://kravmaga.com/">Krav Maga</a> and has a three-step
+      plan for world domination. Rumors that he's secretly a supervillain
+      are slightly exaggerated.
+    </p>
+
     <h3>Lee Donahoe</h3>
+
+    <p>
+      When he's not literally swimming with sharks or hunting powder stashes
+      on his snowboard, you can find Lee in front of his computer designing
+      interfaces, doing front-end development, or writing some of the
+      interface-related Learn Enough tutorials.
+    </p>
+
     <h3>Nick Merwin</h3>
+
+    <p>
+      You may have seen him shredding guitar live with Capital Cities on Jimmy
+      Kimmel, Conan, or The Ellen Show, but rest assured Nick is a true nerd
+      at heart. He's just as happy shredding well-spec'd lines of code from a
+      tour bus as he is from his kitchen table.
+    </p>
+
   </body>
 
 </html>
