--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
         href="http://learnenough.com/email">sign up for our official email
         list</a> now.
       </p>
+      <p>
+        HTML was created by the original "web developer", computer scientist
+        <a href="https://en.wikipedia.org/wiki/Tim_Berners-Lee">Tim
+        Berners-Lee</a>. It's not true that Sir Tim invented HTML in order to
+        share pictures of his cat, but it would be cool if it were.
+      </p>
+
+      <img src="images/kitten.jpg" alt="An adorable kitten">
 
     <h2>Background</h2>
 
@@ -57,6 +65,10 @@
       plan for world domination. Rumors that he's secretly a supervillain
       are slightly exaggerated.
     </p>
+    <p>
+      You should follow Michael on Twitter
+      <a href="http://twitter.com/mhartl">here</a>.
+    </p>
 
     <h3>Lee Donahoe</h3>
 
@@ -66,6 +78,10 @@
       interfaces, doing front-end development, or writing some of the
       interface-related Learn Enough tutorials.
     </p>
+    <p>
+      You should follow Lee on Twitter
+      <a href="http://twitter.com/leedonahoe">here</a>.
+    </p>
 
     <h3>Nick Merwin</h3>
 
@@ -74,6 +90,10 @@
       Kimmel, Conan, or The Ellen Show, but rest assured Nick is a true nerd
       at heart. He's just as happy shredding well-spec'd lines of code from a
       tour bus as he is from his kitchen table.
+    </p>
+    <p>
+      You should follow Nick on Twitter
+      <a href="http://twitter.com/nickmerwin">here</a>.
     </p>
 
   </body>
