--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         share pictures of his cat, but it would be cool if it were.
       </p>
 
-      <a href="cdn.learnenough.com/kitten.jpg">
+      <a href="http://cdn.learnenough.com/kitten.jpg">
         <img src="images/kitten.jpg" alt="An adorable kitten">
       </a>
 
