Add moby dick webpage and links

--- a/tags.html
+++ b/tags.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ang="en">
 
   <head>
     <title>HTML Tags</title>
@@ -7,6 +7,12 @@
   </head>
 
   <body>
+
+    <div>
+      <a href="index.html">Home</a>
+      <a href="moby_dick.html">Moby Dick</a>
+      <a href="tags.html">HTML Tags</a>
+    </div>
 
     <h1>Important HTML tags</h1>
     <a href="http://cdn.learnenough.com/storm_trooper_tagged.jpg">
@@ -58,6 +64,26 @@
         <td>table data</td>
         <td>include a table data cell</td>
       </tr>
+      <tr>
+        <td><code>header</code></td>
+        <td>header</td>
+        <td>add a header</td>
+      </tr>
+      <tr>
+        <td><code>div</code></td>
+        <td>divide</td>
+        <td>add a division</td>
+      </tr>
+      <tr>
+        <td><code>ol</code></td>
+        <td>ordered list</td>
+        <td>adds a numbered list</td>
+      </tr>
+      <tr>
+        <td><code>ul</code></td>
+        <td>unordered list</td>
+        <td>adds an unordered list</td>
+      </tr>
     </table>
 
     <h2>Inline Elements</h2>
@@ -102,6 +128,24 @@
           </code>
         </td>
         <td><img src="https://bit.ly/1MZAFuQ" alt="Michael Hartl"></td>
+      </tr>
+      <tr>
+        <td><code>span</code></td>
+        <td>span</td>
+        <td>style text</td>
+        <td><code>&lt;span&gt;Call me Ishmael&lt;/span&gt;
+        </code></td>
+        <td><span>Call me Ishmael</span></td>
+      </tr>
+      <tr>
+        <td><code>li</code></td>
+        <td>list element</td>
+        <td>lists an element</td>
+        <td><code>&lt;li&gt;bullet 1&lt;/li&gt;
+        </code></td>
+        <td><ul>
+          <li>bullet 1</li>
+        </ul></td>
       </tr>
     </table>
 
