Finish formatting of the sample website

--- a/tags.html
+++ b/tags.html
@@ -8,10 +8,13 @@
 
   <body>
 
-    <div>
-      <a href="index.html">Home</a>
-      <a href="tags.html">HTML Tags</a>
-      <a href="moby_dick.html">Moby Dick</a>
+    <div style="text-align: right;">
+      <a href="index.html" style="text-decoration: none; color: #0000ff;">
+        Home</a>
+      <a href="tags.html" style="margin-left: 10px; text-decoration: none;
+      color: #0000ff;">HTML Tags</a>
+      <a href="moby_dick.html" style="margin-left: 10px; text-decoration: none;
+      color: #0000ff;">Moby Dick</a>
     </div>
 
     <h1>Important HTML tags</h1>
@@ -30,6 +33,41 @@
       The tables below don't include all HTML tags, but they do list many of
       the most important ones.
     </p>
+
+    <h2>Document Tags</h2>
+
+    <table>
+      <tr>
+        <th>Tag</th>
+        <th>Name</th>
+        <th>Purpose</th>
+      </tr>
+      <tr>
+        <td><code>html</code></td>
+        <td>html</td>
+        <td>top level element of an html document</td>
+      </tr>
+      <tr>
+        <td><code>head</code></td>
+        <td>head</td>
+        <td>provides general info about the document</td>
+      </tr>
+      <tr>
+        <td><code>body</code></td>
+        <td>body</td>
+        <td>represents the content of an html document</td>
+      </tr>
+      <tr>
+        <td><code>title</code></td>
+        <td>title</td>
+        <td>defines the title of an html document</td>
+      </tr>
+      <tr>
+        <td><code>meta</code></td>
+        <td>meta</td>
+        <td>data about data</td>
+      </tr>
+    </table>
 
     <h2>Block Elements</h2>
 
