--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 
   <body>
 
-    <div>
-      <a href="index.html">Home</a>
-      <a href="tags.html">HTML Tags</a>
-      <a href="moby_dick.html">Moby Dick</a>
+    <div style="text-align: right;">
+      <a href="index.html" style="text-decoration: none; color: #0000ff;">
+        Home</a>
+      <a href="tags.html" style="margin-left: 10px; text-decoration: none;
+      color: #0000ff;">HTML Tags</a>
+      <a href="moby_dick.html" style="margin-left: 10px; text-decoration: none;
+      color: #0000ff;">Moby Dick</a>
     </div>
 
     <h1>The Learn Enough Story</h1>
@@ -46,6 +49,20 @@
       <a href="http://cdn.learnenough.com/kitten.jpg">
         <img src="images/kitten.jpg" alt="An adorable kitten">
       </a>
+
+      <TAG>Quotations</TAG>
+      <p>
+        In addition to hosting most of the world's supply of kitten videos, the
+        Web is also full of inspiring quotes, perhaps none more so than this
+        one:
+      </p>
+      <blockquote style="padding: 2px 20px; background: #fafafa;">
+        <p>
+          <em>Don't believe every quote you read on the Internet.</em>
+          <br>
+          -Abraham Lincoln
+        </p>
+      </blockquote>
 
     <h2>Background</h2>
 
