Finish the sample website

--- a/tags.html
+++ b/tags.html
@@ -103,24 +103,39 @@
         <td>include a table data cell</td>
       </tr>
       <tr>
-        <td><code>header</code></td>
-        <td>header</td>
-        <td>add a header</td>
-      </tr>
-      <tr>
         <td><code>div</code></td>
         <td>divide</td>
-        <td>add a division</td>
+        <td>define block-level section in document</td>
+      </tr>
+      <tr>
+        <td><code>header</code></td>
+        <td>header</td>
+        <td>label the page header</td>
       </tr>
       <tr>
         <td><code>ol</code></td>
         <td>ordered list</td>
-        <td>adds a numbered list</td>
+        <td>list elements in numerical order</td>
       </tr>
       <tr>
         <td><code>ul</code></td>
         <td>unordered list</td>
-        <td>adds an unordered list</td>
+        <td>list elements whose order doesn't matter</td>
+      </tr>
+      <tr>
+        <td><code>li</code></td>
+        <td>list item</td>
+        <td>include a list item (ordered or unordered)</td>
+      </tr>
+      <tr>
+        <td><code>blockquote</code></td>
+        <td>block quotation</td>
+        <td>show formatted quotation</td>
+      </tr>
+      <tr>
+        <td><code>br</code></td>
+        <td>break</td>
+        <td>enter line break</td>
       </tr>
     </table>
 
@@ -168,22 +183,20 @@
         <td><img src="https://bit.ly/1MZAFuQ" alt="Michael Hartl"></td>
       </tr>
       <tr>
-        <td><code>span</code></td>
-        <td>span</td>
-        <td>style text</td>
-        <td><code>&lt;span&gt;Call me Ishmael&lt;/span&gt;
+        <td><code>code</code></td>
+        <td>code</td>
+        <td>format as source code</td>
+        <td><code>&lt;code&gt;table&lt;/code&gt;
         </code></td>
-        <td><span>Call me Ishmael</span></td>
+        <td><span>Call me Ishmael.</span></td>
       </tr>
       <tr>
-        <td><code>li</code></td>
-        <td>list element</td>
-        <td>lists an element</td>
-        <td><code>&lt;li&gt;bullet 1&lt;/li&gt;
+        <td><code>span</code></td>
+        <td>span</td>
+        <td>define inline section in document</td>
+        <td><code>&lt;span&gt;Call me Ishmael.&lt;/span&gt;
         </code></td>
-        <td><ul>
-          <li>bullet 1</li>
-        </ul></td>
+        <td><span>Call me Ishmael.</span></td>
       </tr>
     </table>
 
