--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <img src="images/kitten.jpg" alt="An adorable kitten">
       </a>
 
-      <TAG>Quotations</TAG>
+      <!--<TAG>Quotations</TAG>-->
       <p>
         In addition to hosting most of the world's supply of kitten videos, the
         Web is also full of inspiring quotes, perhaps none more so than this
